# Drone-Evolution-Simulation

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  debug_commands.txt  notes.txt
analysis/: live_training.py  read_data.py  requirements.txt  show_training_results.py
include/: Agent.hpp  Environment.cpp  Environment.hpp  EnvironmentVisual.hpp  Genome.hpp  NEATRunner.hpp  NeuralNetwork.hpp  Population.hpp  Rocket.hpp  RocketVisual.hpp  Target.hpp  helper.hpp
src/: Environment.cpp  NEATRunner.cpp  Rocket.cpp  Rocket.hpp  RocketVisual.cpp  RocketVisual.hpp  Visuals.cpp  main.cpp
testingOutputs/: parent1Output.txt  parent2Output.txt  topSortOutput.txt
tests/: test_crossover.cpp  test_determinism.cpp  test_feedForward.cpp  test_mutation.cpp  test_network.cpp  test_recurrent.cpp  test_speciation.cpp
